# opencb

./: Cargo.toml  README-ZH.md  README.md  TECH.md  config.sample.toml  config.toml
.sisyphus/drafts/: README-ENG.md  scheduler-integration.md  scheduler-sqlite-admin.md
.sisyphus/plans/: feature-scheduler-sqlite-admin.md  replace-readme-with-english.md  scheduler-sqlite-admin-impl.md  update-readmes-scheduler.md
docs/: SCHEDULER.md
libs/argv-parser/: mod.rs
openspec/changes/archive/2026-05-30-discord-markdown-fix/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-auto-split-long-messages/: design.md  proposal.md  tasks.md
openspec/changes/per-profile-config-directories/: design.md
openspec/changes/profile-management-commands/: design.md  proposal.md  tasks.md
openspec/specs/argv-parser/: spec.md
openspec/specs/cli-slash-command/: spec.md
openspec/specs/message-formatting/: spec.md
openspec/specs/message-splitting/: spec.md
openspec/specs/per-profile-config/: spec.md
openspec/specs/profile-cli-only/: spec.md
openspec/specs/profile-management/: spec.md
openspec/specs/profiles-command/: spec.md
openspec/specs/profiles-config/: spec.md
openspec/specs/readme-documentation/: spec.md
openspec/specs/send-message-formatting/: spec.md
openspec/specs/slash-commands/: spec.md
scripts/: build-deploy  news.sh
src/: cli.rs  config.rs  error.rs  handler.rs  inbound.rs  main.rs  outbound.rs  profile_manager.rs  scheduler.rs  splitter.rs  sqlite_job_store.rs  types.rs
src/slash_commands/: cli.rs  echo.rs  mod.rs
(+38 files in other folders)
