[package]
name = "opencb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord API wrapper - open source, auditable crate
# rustls_backend: pure Rust TLS implementation (no OpenSSL black box)
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "http", "utils", "cache", "rustls_backend"] }
# Poise: modern command framework (replaces deprecated standard_framework)
# Seperate dependency needed because poise makes serenity module private
poise = { version = "0.6" }
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# TOML parsing for config.toml
toml = "0.8"
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime (required by serenity)
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "io-util"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
regex = "1"
rand = "0.8"
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rusqlite = "0.29"
r2d2 = "0.8"
r2d2-rusqlite = "0.20"

[dev-dependencies]
# Unit test utilities
mockall = "0.12"
predicates = "3.0"
